Various corrections and changes.

--- a/01_agama/madhyama/MA_056.md
+++ b/01_agama/madhyama/MA_056.md
@@ -75,7 +75,7 @@ next: MA_057.html
   </tr>
   <tr>
     <td class='ch' title='t26.1.491c15'>「彼有此五習法已，復修四法。 云何為四？ 修惡露令斷欲。 修慈令斷恚。 修息出息入令斷亂念。 修無常想令斷我慢。</td>
-    <td id='p14'>14. “Once he possesses these five things to cultivate, he cultivates another four things. What are the four? He contemplates the foul discharges to end desire. He cultivates kindness to end anger. He’s mindful of breathing in and out to end distracted thoughts. He cultivates the notion of impermanence to end self-pride.</td>
+    <td id='p14'>14. “Once he possesses these five things to cultivate, he cultivates another four things. What are the four? He contemplates the foul discharges to end desire. He cultivates kindness to end anger. He’s mindful of breathing in and out to end distracted thoughts. He cultivates the notion of impermanence to end self-conceit.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.491c18'>「彌醯，若比丘自善知識、與善知識倶、善知識共和合，當知必修習禁戒，守護從解脫。 又復，善攝威儀、禮節。 見纖芥罪，常懷畏怖受持學戒。</td>
@@ -95,11 +95,11 @@ next: MA_057.html
   </tr>
   <tr>
     <td class='ch' title='t26.1.492a4'>「彌醯，若比丘自善知識、與善知識倶、善知識共和合，當知必修惡露令斷欲。 修慈令斷恚。 修息出息入令斷亂念。 修無常想令斷我慢。</td>
-    <td id='p19'>19. “Meghiya, if a monk is himself a good friend, in the company of good friends, and in harmony with good friends, you should know that he’ll surely contemplate the foul discharges to end desire. He’ll cultivate kindness to end anger. He’ll be mindful of breathing in and out to end confused thoughts. He’ll cultivate the notion of impermanence to end self-pride.</td>
+    <td id='p19'>19. “Meghiya, if a monk is himself a good friend, in the company of good friends, and in harmony with good friends, you should know that he’ll surely contemplate the foul discharges to end desire. He’ll cultivate kindness to end anger. He’ll be mindful of breathing in and out to end confused thoughts. He’ll cultivate the notion of impermanence to end self-conceit.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.492a7'>「彌醯，若比丘得無常想者，必得無我想。 彌醯，若比丘得無我想者，便於現法斷一切我慢，得息、滅盡、無為、涅槃。」</td>
-    <td id='p20'>20. “Meghiya, if a monk gets the notion of impermanence, he’ll surely get the notion of selflessness. Meghiya, if a monk gets the notion of selflessness, then he’ll end all self-pride. Right here in the present, he’ll attain his rest, cessation, ending, the unconditioned, and <em>nirvāṇa</em>.”</td>
+    <td id='p20'>20. “Meghiya, if a monk gets the notion of impermanence, he’ll surely get the notion of selflessness. Meghiya, if a monk gets the notion of selflessness, then he’ll end all self-conceit. Right here in the present, he’ll attain his rest, cessation, ending, the unconditioned, and <em>nirvāṇa</em>.”</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.492a10'>佛說如是。 尊者彌醯及諸比丘聞佛所說歡喜，奉行。</td>
