--- a/01_agama/madhyama/MA_057.md
+++ b/01_agama/madhyama/MA_057.md
@@ -29,7 +29,7 @@ next: MA_058.html
 6\. “Furthermore, a monks cultivates wisdom and observes the law of arising and passing away. Attaining such knowledge, which is a noble and wise insight, he discerns and clearly understands the correct way to end suffering. This is the fifth thing to cultivate when someone wants to complete the mind’s liberation when it isn’t complete yet.
 {:#p6}
 
-7\. “Once he possesses these five things to cultivate, he cultivates another four things. What are the four? He contemplates the foul discharges to end desire. He cultivates kindness to end anger. He’s mindful of breathing in and out to end distracted thoughts. He cultivates the notion of impermanence to end self-pride.
+7\. “Once he possesses these five things to cultivate, he cultivates another four things. What are the four? He contemplates the foul discharges to end desire. He cultivates kindness to end anger. He’s mindful of breathing in and out to end distracted thoughts. He cultivates the notion of impermanence to end self-conceit.
 {:#p7}
 
 8\. “If a monk is himself a good friend, in the company of good friends, and in harmony with good friends, you should know that he’ll surely cultivate the precepts and protect the Pratimokṣa. His behavior and manners will also be well-composed. Seeing a tiny misdeed, he’ll be constantly anxious about maintaining his training and precepts.
@@ -44,10 +44,10 @@ next: MA_058.html
 11\. “If a monk is himself a good friend, in the company of good friends, and in harmony with good friends, you should know that he’ll surely cultivate wisdom and observe the law of arising and passing away. Attaining such knowledge, which is a noble and wise insight, he’ll discern and clearly understand the correct way to end suffering.
 {:#p11}
 
-12\. “If a monk is himself a good friend, in the company of good friends, and in harmony with good friends, you should know that he’ll surely contemplate the foul discharges to end desire. He’ll cultivate kindness to end anger. He’ll be mindful of breathing in and out to end confused thoughts. He’ll cultivate the notion of impermanence to end self-pride.
+12\. “If a monk is himself a good friend, in the company of good friends, and in harmony with good friends, you should know that he’ll surely contemplate the foul discharges to end desire. He’ll cultivate kindness to end anger. He’ll be mindful of breathing in and out to end confused thoughts. He’ll cultivate the notion of impermanence to end self-conceit.
 {:#p12}
 
-13\. “If a monk gets the notion of impermanence, he’ll surely get the notion of selflessness. If a monk gets the notion of selflessness, then he’ll end all self-pride. Right here in the present, he’ll attain his rest, cessation, ending, the unconditioned, and <em>nirvāṇa</em>.”
+13\. “If a monk gets the notion of impermanence, he’ll surely get the notion of selflessness. If a monk gets the notion of selflessness, then he’ll end all self-conceit. Right here in the present, he’ll attain his rest, cessation, ending, the unconditioned, and <em>nirvāṇa</em>.”
 {:#p13}
 
 14\. This is what the Buddha said. Those monks who heard what the Buddha taught rejoiced and approved.
