--- a/01_agama/samyukta/01/SA1_170.md
+++ b/01_agama/samyukta/01/SA1_170.md
@@ -79,15 +79,15 @@ next: SA1_172.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.14c26'>比丘白佛： 「善哉所說，歡喜、隨喜。 更有所問： 世尊，云何生我慢？」</td>
-    <td id='p10'>10. The monk said to the Buddha, “I rejoice at and am gladdened by such excellent words. I have another question: Bhagavān, what gives rise to self conceit?”</td>
+    <td id='p10'>10. The monk said to the Buddha, “I rejoice at and am gladdened by such excellent words. I have another question: Bhagavān, what gives rise to self-conceit?”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.14c28'>佛告比丘： 「愚癡、無聞凡夫於色見我、異我、相在。 於受⋯想⋯行⋯識見我、異我、相在。 於此生我慢。」</td>
-    <td>The Buddha told the monk, “A foolish, uneducated ordinary man sees form as self, different than self, or either being present in the other. He sees feeling … conception … volition … awareness as self, different than self, or either being present in the other. These things give rise to self conceit.”</td>
+    <td>The Buddha told the monk, “A foolish, uneducated ordinary man sees form as self, different than self, or either being present in the other. He sees feeling … conception … volition … awareness as self, different than self, or either being present in the other. These things give rise to self-conceit.”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.15a1'>比丘白佛： 「善哉所說，歡喜、隨喜。 更有所問： 世尊，云何得無我慢？」</td>
-    <td id='p11'>11. The monk said to the Buddha, “I rejoice at and am gladdened by such excellent words. I have another question: Bhagavān, what obtains the absence of self conceit?”</td>
+    <td id='p11'>11. The monk said to the Buddha, “I rejoice at and am gladdened by such excellent words. I have another question: Bhagavān, what obtains the absence of self-conceit?”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.15a3'>佛告比丘： 「多聞聖弟子不於色見我、異我、相在。 不於受⋯想⋯行⋯識，見我、異我、相在。」</td>
@@ -152,7 +152,7 @@ next: SA1_172.html
     <li>[170] Aggregates, their root, and “Are aggregates acquisition?”<br/>
     Two aggregates connected,<br/>
     Their names, causes, and enjoyment,<br/>
-    Two on self conceit, and quickly ending the contaminants.<sup id="ref3"><a href="#n3">3</a></sup></li>
+    Two on self-conceit, and quickly ending the contaminants.<sup id="ref3"><a href="#n3">3</a></sup></li>
   </ul></td>
 </tr>
   <tr>
@@ -168,9 +168,9 @@ next: SA1_172.html
 <ol class="notes-list">
 <li id="n1"><p>This is <em>sūtra</em> no. 58 in the <cite>Taisho</cite> edition and no. 170 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0014b12" target="_blank">T99.2.14b12-15b3</a>). It’s parallel with <a href="https://suttacentral.net/sn22.82" target="_blank">SN 22.82</a>.</p>
 <p>The narrative introducing this discourse is different than the introduction to SN 22.82. There, the setting was an assembly of the monks during the night of the full moon sabbath. Here, there is no special occasion other than the Buddha emerging from meditation. He then goes to the monks, and briefly states that there are five acquired aggregates. Both introductions serve to explain why a monk approached the Buddha to ask a series of ten questions. Some of these questions analyze how these acquired aggregates are different than the five aggregates, which suggests that the concept was introduced after the aggregates were well established.</p>
-<p>Comparing the series of ten questions and answers here to those in SN 22.82, the answers are nearly identical, but several questions are put in different terms. For instance, there is a question in SN 22.82 about personality view (P. <em>sakkāyadiṭṭhi</em>) that is paralleled here with a question about self conceit (C. <span class="ch">我慢</span>, S. <em>asmimāna</em>). In another case, a question here about what one must know and see to end the contaminants is paralleled in SN 22.82 by a question about ending I-making, mine-making, etc. These alternate forms of the questions have little impact on their answers and should probably be considered equivalent to each other. [<a href="#ref1">back</a>]</p></li>
+<p>Comparing the series of ten questions and answers here to those in SN 22.82, the answers are nearly identical, but several questions are put in different terms. For instance, there is a question in SN 22.82 about personality view (P. <em>sakkāyadiṭṭhi</em>) that is paralleled here with a question about self-conceit (C. <span class="ch">我慢</span>, S. <em>asmimāna</em>). In another case, a question here about what one must know and see to end the contaminants is paralleled in SN 22.82 by a question about ending I-making, mine-making, etc. These alternate forms of the questions have little impact on their answers and should probably be considered equivalent to each other. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p><em>what is the root … come together  … arise  … instigated?</em> C. <span class="ch">以何為根？以何集？以何生？以何觸？</span> In SN 22.82, there is only one question about the root of the acquired aggregates. This series of four questions is very similar to the series of questions asked about the pains suffered by sentient beings in SĀ 3.9. I have translated them similarly as I did there. See the <a href="../03/SA3_9.html#n3" target="_blank">notes to that <em>sūtra</em> for a discussion of these terms</a>. [<a href="#ref2">back</a>]</p></li>
-<li id="n3"><p>This <em>uddāna</em> verse only lists the questions that were asked in this <em>sūtra</em>, which leaves the preceding eleven <em>sūtra</em>s (SĀ 1.159-169) without an <em>uddāna</em>. Yinshun suggests that <span class="ch">二味</span> should be amended to <span class="ch">味二</span>, given that there are two questions on the subject of self conceit. It’s also notable that the last section about <em>karma</em> is absent from the <em>uddāna</em>. [<a href="#ref3">back</a>]</p></li>
+<li id="n3"><p>This <em>uddāna</em> verse only lists the questions that were asked in this <em>sūtra</em>, which leaves the preceding eleven <em>sūtra</em>s (SĀ 1.159-169) without an <em>uddāna</em>. Yinshun suggests that <span class="ch">二味</span> should be amended to <span class="ch">味二</span>, given that there are two questions on the subject of self-conceit. It’s also notable that the last section about <em>karma</em> is absent from the <em>uddāna</em>. [<a href="#ref3">back</a>]</p></li>
 </ol>
 <hr/>
 
