--- a/01_agama/samyukta/01/SA1_53.md
+++ b/01_agama/samyukta/01/SA1_53.md
@@ -51,7 +51,7 @@ next: SA1_54.html
   </tr>
   <tr>
     <td class="ch" title='t125.2.70c25'>「諸比丘！云何修無常想，修習多修習，能斷一切欲愛、色愛、無色愛、掉、慢、無明？若比丘於空露地、若林樹間，善正思惟，觀察色無常，受、想、行、識無常。如是思惟，斷一切欲愛、色愛、無色愛、掉、慢、無明。所以者何？無常想者，能建立無我想，聖弟子住無我想，心離我慢，順得涅槃。」</td>
-    <td id='p10'>10. “Monks, how does cultivating the concept of impermanence and cultivating it often stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance? Suppose a monk sits in an open area or among the trees of a grove, and he skillfully and properly contemplates. He observes the impermanence of form, the impermanence of feeling … conception … volition … consciousness. Contemplating in this way, he stops all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance. Why is that? The concept of impermanence establishes the concept of selflessness. When a noble disciple abides in the concept of selflessness, their mind becomes free of self conceit, which leads to attainment of <em>nirvāṇa</em>.”</td>
+    <td id='p10'>10. “Monks, how does cultivating the concept of impermanence and cultivating it often stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance? Suppose a monk sits in an open area or among the trees of a grove, and he skillfully and properly contemplates. He observes the impermanence of form, the impermanence of feeling … conception … volition … consciousness. Contemplating in this way, he stops all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance. Why is that? The concept of impermanence establishes the concept of selflessness. When a noble disciple abides in the concept of selflessness, their mind becomes free of self-conceit, which leads to attainment of <em>nirvāṇa</em>.”</td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.71a2'>佛說是經已，時，諸比丘聞佛所說，歡喜奉行。</td>
@@ -66,9 +66,9 @@ next: SA1_54.html
 <ol class="notes-list">
 <li id="n1">This is <em>sūtra</em> no. 270 in the <cite>Taisho</cite> edition and no. 53 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0070c02" target="_blank">T99.2.70c2-1a3</a>). It has a direct parallel at <a href="https://suttacentral.net/sn22.101" target="_blank">SN 22.102</a>. While the two versions of this <em>sūtra</em> are very similar and clearly derive from a common source, there are a couple divergences.<br/>
 First, the metaphors employed are a little different. In the P. <em>sutta</em>, there are ten parables: the farmer plowing, cutting grass, mango fruit falling, rafters of a house, fragrant roots, fragrant woods, fragrant flowers, the wheel-turning king, the radiance of the moon, and the sun dispelling darkness. This <em>sūtra</em> in SĀ has eight metaphors: the farmer plowing, cutting grass, mango fruit falling, timbers of a building, the elephant’s footprint, the ocean, the sun dispelling darkness, and the wheel-turning king. Comparing these two sets of metaphors, we can see that five are shared and in the same order except for the sunrise, which is placed last in the P. <em>sutta</em>. From this, I would assume that the original version did include a set of parables, but perhaps only four or five of them.<br/>
-The conclusions also provide different explanations about how the concept of impermanence eliminates craving, etc. The P. <em>sutta</em> ties it to recognizing the five aggregates, their origin, and their passing away. The C. <em>sūtra</em> says that contemplating impermanence leads to the realization of selflessness. This eliminates self conceit, which in turn leads to the attainment of <em>nirvāṇa</em>. [<a href="#ref1">back</a>]</li>
+The conclusions also provide different explanations about how the concept of impermanence eliminates craving, etc. The P. <em>sutta</em> ties it to recognizing the five aggregates, their origin, and their passing away. The C. <em>sūtra</em> says that contemplating impermanence leads to the realization of selflessness. This eliminates self-conceit, which in turn leads to the attainment of <em>nirvāṇa</em>. [<a href="#ref1">back</a>]</li>
 <li id="n2"><em>cultivated and cultivated often</em>. C. 修習多修習, P. <em>bhāvita bahulīkata</em>. 多修習 (“to often cultivate”) fits a lit. reading of P. <em>bahulīkata</em>, which is a compound of <em>bahulī</em> (“much, often”) and <em>kata</em> (“done”). [<a href="#ref2">back</a>]</li>
-<li id="n3"><em>can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.</em> C. 能斷一切欲愛、色愛、無色愛、掉、慢、無明, P. <em>sabbaṁ kāmarāgaṁ pariyādiyati, sabbaṁ rūparāgaṁ pariyādiyati, sabbaṁ bhavarāgaṁ pariyādiyati, sabbaṁ avijjaṁ pariyādiyati, sabbaṁ asmimānaṁ samūhanati</em>. The three cravings of desire, form, and formlessness refer to the desire to be reborn in the three realms of existence (presumably, the heavens of the desire realm, the form realm, and the formless realm). Interestingly, the P. parallel has <em>bhavarāga</em> (“craving of existence”) rather than <em>arūparāga</em> (“craving of formlessness”), which seems intended to make it clear that the first two items refer to realms of rebirth. Other differences are that the P. parallel doesn’t include “agitation” and makes <em>asmimāna</em> (“self conceit”) the final item. Here in SĀ, “ignorance” is the final item, and only “pride” (rather than “self conceit”) is mentioned. This list of six items doesn’t appear to have been a standardized list in Sarvāstivāda Abhidharma, though the individual items do appear in other contexts. [<a href="#ref3">back</a>]</li>
+<li id="n3"><em>can stop all cravings of desire, cravings of form, cravings of formlessness, agitation, pride, and ignorance.</em> C. 能斷一切欲愛、色愛、無色愛、掉、慢、無明, P. <em>sabbaṁ kāmarāgaṁ pariyādiyati, sabbaṁ rūparāgaṁ pariyādiyati, sabbaṁ bhavarāgaṁ pariyādiyati, sabbaṁ avijjaṁ pariyādiyati, sabbaṁ asmimānaṁ samūhanati</em>. The three cravings of desire, form, and formlessness refer to the desire to be reborn in the three realms of existence (presumably, the heavens of the desire realm, the form realm, and the formless realm). Interestingly, the P. parallel has <em>bhavarāga</em> (“craving of existence”) rather than <em>arūparāga</em> (“craving of formlessness”), which seems intended to make it clear that the first two items refer to realms of rebirth. Other differences are that the P. parallel doesn’t include “agitation” and makes <em>asmimāna</em> (“self-conceit”) the final item. Here in SĀ, “ignorance” is the final item, and only “pride” (rather than “self-conceit”) is mentioned. This list of six items doesn’t appear to have been a standardized list in Sarvāstivāda Abhidharma, though the individual items do appear in other contexts. [<a href="#ref3">back</a>]</li>
 <li id="n4"><em>multi-story building</em>. C.樓閣, P. <em>kūṭāgāra</em>. I’m not entirely sure exactly what type of building is meant here. It may refer to a lookout like a belvedere atop a multi-story building or the upper levels of a tower. 樓閣 typically translated P/S. <em>kūṭāgāra</em>, as it did here judging by the P. parallel. [<a href="#ref4">back</a>]</li>
 <li id="n5"><em>fit inside of it</em>. C. 能攝受. Lit. “can accept.” I’ve translated “accept” here to mean “fit into.” [<a href="#ref5">back</a>]</li>
 </ol>
