--- a/01_agama/samyukta/02/SA2_41-48.md
+++ b/01_agama/samyukta/02/SA2_41-48.md
@@ -19,7 +19,7 @@ next: SA2_49-56.html
   </tr>
   <tr>
     <td class="ch" title='t99.2.50c8'>爾時，尊者羅睺羅往詣佛所。 稽首佛足，退住一面，白佛言： 「世尊，云何知、云何見我內識身及外一切相，令我、我所、我慢使繫著不生？」</td>
-    <td id='p2'>2. It was then that Venerable Rāhula visited the Buddha. He bowed his head at the Buddha’s feet, withdrew to sit at one side, and said, “Bhagavān, how do I know and how do I see [41] my body of inner awareness<sup id="ref2"><a href="#n2">2</a></sup> … [42] the outer senses of forms, sounds, odors, flavors, touches, and ideas … [43] visual awareness … auditory … olfactory … gustatory … somatic … and mental awareness … [44] visual contact … auditory … olfactory … gustatory … somatic … and mental contact … [45] feelings that arise from visual contact … auditory … olfactory … gustatory … somatic … and feelings that arise from mental contact … [46] notions that arise from visual contact … auditory … olfactory … gustatory … somatic … and notions that arise from mental contact … [47] intentions that arise from visual contact … auditory … olfactory … gustatory … somatic … and intentions that arise from mental contact … [48] cravings that arise from visual contact … auditory … olfactory … gustatory … somatic … and cravings that arise from mental contact and all external signs such that binding attachments to self, what belongs to self, and the tendency of self conceit won’t arise?”</td>
+    <td id='p2'>2. It was then that Venerable Rāhula visited the Buddha. He bowed his head at the Buddha’s feet, withdrew to sit at one side, and said, “Bhagavān, how do I know and how do I see [41] my body of inner awareness<sup id="ref2"><a href="#n2">2</a></sup> … [42] the outer senses of forms, sounds, odors, flavors, touches, and ideas … [43] visual awareness … auditory … olfactory … gustatory … somatic … and mental awareness … [44] visual contact … auditory … olfactory … gustatory … somatic … and mental contact … [45] feelings that arise from visual contact … auditory … olfactory … gustatory … somatic … and feelings that arise from mental contact … [46] notions that arise from visual contact … auditory … olfactory … gustatory … somatic … and notions that arise from mental contact … [47] intentions that arise from visual contact … auditory … olfactory … gustatory … somatic … and intentions that arise from mental contact … [48] cravings that arise from visual contact … auditory … olfactory … gustatory … somatic … and cravings that arise from mental contact and all external signs such that binding attachments to self, what belongs to self, and the tendency of self-conceit won’t arise?”</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.50c11'>爾時，世尊告羅睺羅： 「善哉，羅睺羅，能問如來甚深之義！」</td>
@@ -31,7 +31,7 @@ next: SA2_49-56.html
   </tr>
   <tr>
     <td class="ch" title='t99.2.50c15'>「羅睺羅，作如是知、如是見： 『我此識身及外一切相，令我、我所、我慢使繫著不生。』 羅睺羅，如是我、我所、我慢使繫著不生者。 羅睺羅，是名斷愛濁，見正無間等究竟苦邊。」</td>
-    <td id='p5'>5. “Rāhula, you should thus know and see: ‘My body of inner awareness <em>and so on as above</em> and all external signs will not cause the arising of binding attachments to self, what belongs to self, and the tendency of self conceit.’ Rāhula, one prevents the arising of binding attachments to self, what belongs to self, and the tendency of self conceit in this way. Rāhula, this is called ending the defilement of craving and seeing right then the final end of suffering.”</td>
+    <td id='p5'>5. “Rāhula, you should thus know and see: ‘My body of inner awareness <em>and so on as above</em> and all external signs will not cause the arising of binding attachments to self, what belongs to self, and the tendency of self-conceit.’ Rāhula, one prevents the arising of binding attachments to self, what belongs to self, and the tendency of self-conceit in this way. Rāhula, this is called ending the defilement of craving and seeing right then the final end of suffering.”</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.50c19'>佛說此經已，尊者羅睺羅聞佛所說歡喜，奉行。</td>
