--- a/01_agama/samyukta/04/SA4_10.md
+++ b/01_agama/samyukta/04/SA4_10.md
@@ -23,7 +23,7 @@ next: SA4_11.html
   </tr>
   <tr>
     <td class="ch" title='t125.2.105a16'>「若比丘於苦聖諦已知，已解⋯ 於苦集聖諦已知，已斷⋯ 於苦滅聖諦已知，已證⋯ 於苦滅道跡聖諦已知，已修。 是名比丘斷五支，成六分，守護於一，依猗於四。 捨除諸諦，離四衢，證諸覺想。 自身所作，心善解脫，慧善解脫。 純一清白，名為上士。」</td>
-    <td id='p3'>3. “If a monk has known the noble truth of suffering, then he has understood [suffering] … has known the noble truth of suffering’s formation, then he has ended [its formation] … has known the noble truth of suffering’s cessation, then he has realized [its cessation] … has known the noble truth of the path to suffering’s cessation, then he has cultivated [that path]. He is called a monk who has ended the five factors, achieved six parts, guarded one thing, and relied upon four things. He abandons truths, leaves the crossroads, and realizes the ideas. By his own doing, his mind is well liberated, and his wisdom is well liberated. Being entirely pure white, he is called a superior man.”<sup id="ref2"><a href="#n2">2</a></sup></td>
+    <td id='p3'>3. “If a monk has known the noble truth of suffering, then he has understood [suffering] … has known the noble truth of suffering’s formation, then he has ended [its formation] … has known the noble truth of suffering’s cessation, then he has realized [its cessation] … has known the noble truth of the path to suffering’s cessation, then he has cultivated [that path]. He is called a monk who has ended the five factors, achieved six parts, guarded one thing, and relied upon four things. He abandons the truths, leaves the crossroads, and realizes ideas. By his own doing, his mind is well-liberated, and his wisdom is well-liberated. Being entirely pure white, he is called a superior man.”<sup id="ref2"><a href="#n2">2</a></sup></td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.105a22'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
@@ -36,10 +36,10 @@ next: SA4_11.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 388 in the <cite>Taisho</cite> edition and no. 551 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0105a13" target="_blank">T99.2.105a13-23</a>). Its list of the abodes of a noble person is partially parallel with that found in <a href="https://suttacentral.net/an10.19" target="_blank">AN 10.19</a>. [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>a monk who has ended the five factors, achieved six parts, guarded against one, and relied upon four. He abandons the truths, leaves the crossroads, and realizes the ideas. By his own doing, his mind is well liberated, and his wisdom is well liberated.</em> C. 比丘斷五支，成六分，守護於一，依猗於四。捨除諸諦，離四衢，證諸覺想。自身所作，心善解脫，慧善解脫. Compare this with the parallel in AN 10.19: “A mendicant has given up five factors, is endowed with six factors, has a single guard, has four supports, has eliminated idiosyncratic interpretations of the truth, has totally given up searching, has pure intentions, has stilled the physical process, and is well freed in mind and well freed by wisdom” (<em>Idha, bhikkhave, bhikkhu pañcaṅgavippahīno hoti, chaḷaṅgasamannāgato, ekārakkho, caturāpasseno, paṇunnapaccekasacco, samavayasaṭṭhesano, anāvilasaṅkappo, passaddhakāyasaṅkhāro, suvimuttacitto, suvimuttapañño</em>).<br/>
-The esoteric parts of this passage are not explained in SĀ. However, we find some commentary in Abhidharma sources like the <cite>Śāriputra Abhidharma</cite> and <cite>Yogācārabhūmi</cite>. In the former, we find definitions for some of these expressions (<a href="https://cbetaonline.dila.edu.tw/zh/T28n1548_p0588b23" target="_blank">T1548.28.588b23-9a19</a>). In the <cite>Yogācārabhūmi</cite>, a very similar passage is quoted (<a href="https://cbetaonline.dila.edu.tw/zh/T30n1579_p0477a26" target="_blank">T1579.30.477a26-9</a>). Some of these descriptions are found scattered in Sarvāstivāda Abhidharma texts, too. None of these sources are from the same canonical tradition as our <em>sūtra</em> passage, but the Sarvāstivāda Abhidharma would’ve been closely related to it.<br/>
-It would seem from these sources, however, that ending five factors meant ending the five hindrances (desire, hate, sleepiness, agitation, and doubt). Achieving six parts referred to being detached and unaffected by the six senses. Guarding one thing referred to guarding the mind. The four supports were defined in differing ways, referring to either supports for the religious life or general guidelines for practice. Abandoning the truths likely referred to abandoning opinions about subjects like whether the world is eternal or not. They are not actual truths, but views taken to be true. It’s not clear to me what leaving the crossroads or realizing concepts specifically meant here. [<a href="#ref2">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 388 in the <cite>Taisho</cite> edition and no. 551 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0105a13" target="_blank">T99.2.105a13-23</a>). Its list of the abodes of a noble person is partially parallel with that found in <a href="https://suttacentral.net/an10.19" target="_blank">AN 10.19</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>a monk who has ended the five factors, achieved six parts, guarded one thing, and relied upon four things. He abandons truths, leaves the crossroads, and realizes ideas. By his own doing, his mind is well-liberated, and his wisdom is well-liberated.</em> C. <span class="ch">比丘斷五支，成六分，守護於一，依猗於四。捨除諸諦，離四衢，證諸覺想。自身所作，心善解脫，慧善解脫</span>. Compare this with the parallel in AN 10.19: “A mendicant has given up five factors, is endowed with six factors, has a single guard, has four supports, has eliminated idiosyncratic interpretations of the truth, has totally given up searching, has pure intentions, has stilled the physical process, and is well freed in mind and well freed by wisdom” (<em>Idha, bhikkhave, bhikkhu pañcaṅgavippahīno hoti, chaḷaṅgasamannāgato, ekārakkho, caturāpasseno, paṇunnapaccekasacco, samavayasaṭṭhesano, anāvilasaṅkappo, passaddhakāyasaṅkhāro, suvimuttacitto, suvimuttapañño</em>).</p>
+<p>The esoteric parts of this passage are not explained in SĀ. However, we find some commentary in Abhidharma sources like the <cite>Śāriputra Abhidharma</cite> and <cite>Yogācārabhūmi</cite>. In the former, we find definitions for some of these expressions (<a href="https://cbetaonline.dila.edu.tw/zh/T28n1548_p0588b23" target="_blank">T1548.28.588b23-9a19</a>). In the <cite>Yogācārabhūmi</cite>, a very similar passage is quoted (<a href="https://cbetaonline.dila.edu.tw/zh/T30n1579_p0477a26" target="_blank">T1579.30.477a26-9</a>). Some of these descriptions are found scattered in Sarvāstivāda Abhidharma texts, too. None of these sources are from the same canonical tradition as our <em>sūtra</em> passage, but the Sarvāstivāda Abhidharma would’ve been closely related to it.</p>
+<p>It would seem from these sources, however, that ending five factors meant ending the five hindrances (desire, hate, sleepiness, agitation, and doubt). Achieving six parts referred to being detached and unaffected by the six senses. Guarding one thing referred to guarding the mind. Relying on four things was defined in differing ways, referring to either supports for the religious life or general guidelines for practice. Abandoning truths likely referred to abandoning opinions about subjects like whether the world is eternal or not. They are not actual truths, but views taken to be true. It’s not clear to me what leaving the crossroads or realizing concepts specifically meant here. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
