--- a/01_agama/samyukta/04/SA4_11.md
+++ b/01_agama/samyukta/04/SA4_11.md
@@ -39,7 +39,7 @@ next: SA4_55.html
   </tr>
   <tr>
     <td class="ch" title='t125.2.105b10'>「如來、應、等正覺為大醫王。 成就四德，療眾生病亦復如是。 云何為四？ 謂如來知『此是苦聖諦』，如實知⋯ 『此是苦集聖諦』，如實知⋯ 『此是苦滅聖諦』，如實知⋯ 『此是苦滅道跡聖諦』，如實知。</td>
-    <td id='p7'>7. “The Tathāgata, the Arhat, the Completely Awakened One is the great king of doctors. He achieved these four virtues to heal the illness of sentient beings in the same way. What are the four? The Tathāgata knows ‘this is the noble truth of suffering,’ and he truly knows it … ‘this is the noble truth of suffering’s formation,’ and he truly knows it … ‘this is the noble truth of suffering’s cessation,’ and he truly knows it … ‘this is the noble truth of the path to suffering’s cessation,’ and he truly knows it.</td>
+    <td id='p7'>7. “The Tathāgata, Arhat, and Completely Awakened One is the great king of doctors. He achieved these four virtues to heal the illness of sentient beings in the same way. What are the four? The Tathāgata knows ‘this is the noble truth of suffering,’ and he truly knows it … ‘this is the noble truth of suffering’s formation,’ and he truly knows it … ‘this is the noble truth of suffering’s cessation,’ and he truly knows it … ‘this is the noble truth of the path to suffering’s cessation,’ and he truly knows it.</td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.105b14'>「諸比丘，彼世間良醫於生根本對治不如實知⋯老、病、死、憂、悲、惱、苦根本對治不如實知。 如來、應、等正覺為大醫王於生根本知對治如實知⋯於老、病、死、憂、悲、惱、苦根本對治如實知。 是故如來、應、等正覺名大醫王。」</td>
@@ -56,8 +56,8 @@ next: SA4_55.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 389 in the <cite>Taisho</cite> edition and no. 552 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0105a24" target="_blank">T99.2.105a24-b20</a>). <a href="https://cbetaonline.dila.edu.tw/zh/T04n0219_f001" target="_blank">T219</a> is an alternate C. trans. from the 10-11th c. (Song dynasty). [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>treatment.</em> C. 對治. This term is lit. “counteract, oppose, antedote, cure” depending on context. It refers to something that cancels or opposes something else. Here, I’ve translated it as “treatment” in the sense of a medical treatment to stop an illness. It could also be translated as a “cure.” [<a href="#ref2">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 389 in the <cite>Taisho</cite> edition and no. 552 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0105a24" target="_blank">T99.2.105a24-b20</a>). <a href="https://cbetaonline.dila.edu.tw/zh/T04n0219_f001" target="_blank">T219</a> is an alternate C. translation from the 10-11th c. (Song dynasty). [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>treatment.</em> C. <span class="ch">對治</span>. This term is lit. “counteract, oppose, antidote, cure” depending on context. It refers to something that cancels or opposes something else. Here, I’ve translated it as “treatment” in the sense of a medical treatment to stop an illness. It could also be translated as “a cure.” [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
