--- a/01_agama/samyukta/01/SA1_29.md
+++ b/01_agama/samyukta/01/SA1_29.md
@@ -19,11 +19,11 @@ next: SA1_30.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.5a12'>爾時，尊者羅睺羅往詣佛所。 頭面禮足，却住一面。 白佛言： 「世尊，云何知、云何見我此識身及外境界一切相能令無有我、我所見、我慢使繫著？」</td>
-    <td id='p2'>2. It was then that Venerable Rāhula visited the Buddha. He bowed his head at the Buddha’s feet, withdrew to sit at one side. He then said to the Buddha, “Bhagavān, how do I know and how do I see this body of awareness and all the signs of the external world such that I’ll have no binding attachments to views of self and what belongs to self or to the tendency of self conceit?”</td>
+    <td id='p2'>2. It was then that Venerable Rāhula visited the Buddha. He bowed his head at the Buddha’s feet, withdrew to sit at one side. He then said to the Buddha, “Bhagavān, how do I know and how do I see this body of awareness and all the signs of the external world such that I’ll have no binding attachments to views of self and what belongs to self or to the tendency of self-conceit?”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.5a15'>佛告羅睺羅： 「善哉！善哉，能問如來： 『云何知、云何見我此識身及外境界一切相令無有我、我所見、我慢使繫著耶？』！」</td>
-    <td id='p3'>3. The Bhagavān then said to Rāhula, “Good! It’s good that you can ask the Tathāgata, ‘How do I know and how do I see this body of awareness and all the signs of the external world such that I’ll have no binding attachments to views of self and what belongs to self or to the tendency of self conceit?’! [Is that what you asked?]”</td>
+    <td id='p3'>3. The Bhagavān then said to Rāhula, “Good! It’s good that you can ask the Tathāgata, ‘How do I know and how do I see this body of awareness and all the signs of the external world such that I’ll have no binding attachments to views of self and what belongs to self or to the tendency of self-conceit?’! [Is that what you asked?]”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.5a18'>羅睺羅白佛言： 「如是，世尊。」</td>
@@ -39,11 +39,11 @@ next: SA1_30.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.5a26'>「如是，羅睺羅，比丘如是知、如是見。如是知、如是見者，於此識身及外境界一切相，無有我、我所見、我慢使繫著。</td>
-    <td id='p6'>6. “Thus, Rāhula, a monk who knows and sees this body of awareness and all the signs of the external world in this way will have no binding attachments to views of self and what belongs to self or to the tendency of self conceit.</td>
+    <td id='p6'>6. “Thus, Rāhula, a monk who knows and sees this body of awareness and all the signs of the external world in this way will have no binding attachments to views of self and what belongs to self or to the tendency of self-conceit.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.5a29'>「羅睺羅，比丘若如是於此識身及外境界一切相，無有我、我所見、我慢使繫著者，比丘是名斷愛欲，轉去諸結。 正無間等，究竟苦邊。」</td>
-    <td id='p7'>7. “Rāhula, if a monk has no binding attachments to views of self and what belongs to self or to the tendency of self conceit regarding this body of awareness and all the signs of the external world, that monk is called one who has stopped craving desires and turned away from the bonds. Right at that moment,<sup id="ref3"><a href="#n3">3</a></sup> he reaches the final end of suffering.”</td>
+    <td id='p7'>7. “Rāhula, if a monk has no binding attachments to views of self and what belongs to self or to the tendency of self-conceit regarding this body of awareness and all the signs of the external world, that monk is called one who has stopped craving desires and turned away from the bonds. Right at that moment,<sup id="ref3"><a href="#n3">3</a></sup> he reaches the final end of suffering.”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.5b3'>時，羅睺羅聞佛所說歡喜，奉行。</td>
