--- a/01_agama/samyukta/04/SA4_4.md
+++ b/01_agama/samyukta/04/SA4_4.md
@@ -23,7 +23,7 @@ next: SA4_5.html
   </tr>
   <tr>
     <td class="ch" title='t125.2.104b16'>「若比丘於苦聖諦當知，當解⋯ 於集聖諦當知，當斷⋯ 於苦滅聖諦當知，當證⋯ 於苦滅道跡聖諦當知，當修。」</td>
-    <td id='p3'>3. “Supposing that a monk will know the noble truth of suffering, then he will understand [suffering] … will know the noble truth of suffering’s formation, then he will end [its formation] … will know the noble truth of suffering’s cessation, then he will realize [its cessation] … will know the noble truth of the path to suffering’s cessation, then he will cultivate [that path].<sup id="ref2"><a href="#n2">2</a></sup>”</td>
+    <td id='p3'>3. “Supposing that a monk will know the noble truth of suffering, then he will understand [suffering] … will know the noble truth of suffering’s formation, then he will end [its formation] … will know the noble truth of suffering’s cessation, then he will realize [its cessation] … will know the noble truth of the path to suffering’s cessation, then he will cultivate [that path].”<sup id="ref2"><a href="#n2">2</a></sup></td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.104b18'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
@@ -36,8 +36,8 @@ next: SA4_5.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 382 in the <cite>Taisho</cite> edition and no. 545 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0104b13" target="_blank">T99.2.104b13-9</a>). [<a href="#ref1">back</a>]</li>
-<li id="n2">I’ve assumed this passage must be abbreviated somewhat; otherwise, it doesn’t form a complete sentence. The verbs “understand,” “end,” “realize,” and “cultivate” correspond to those found in the <a href="SA4_1.html" target="_blank">SĀ 4.1</a>, so I’ve inserted the apparent objects of those verbs. [<a href="#ref2">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 382 in the <cite>Taisho</cite> edition and no. 545 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0104b13" target="_blank">T99.2.104b13-9</a>). [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p>I’ve assumed this passage must be abbreviated somewhat; otherwise, it doesn’t form a complete sentence. The verbs “understand,” “end,” “realize,” and “cultivate” correspond to those found in the <a href="SA4_1.html" target="_blank">SĀ 4.1</a>, so I’ve inserted the apparent objects of those verbs. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
